--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,20 @@
-version: '3.8'
-
 services:
   web:
     build: .
     ports:
       - "5000:5000"
     environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - REDIS_PASSWORD=mysecret
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     depends_on:
       - redis
 
   redis:
     image: redis:6.2-alpine
-    command: redis-server --requirepass mysecret
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     volumes:
       - redis_data:/data
-    environment:
-      - REDIS_PASSWORD=mysecret
     ports:
       - "6379:6379"
 
